force-app/main/default/objects/OA_Engagement_Resolution__c/OA_Engagement_Resolution__c.object-meta.xml
<CustomObject>
    <description>Engagement Resolution Engine (ERE) Phase 1 SHADOW LOG. Observe-only, auditable record of every engagement signal (inbound EmailMessage, Event) and how the resolver matched (or failed to match) it to a Lead/Contact/CampaignMember. WRITE TARGET FOR ERE ONLY. The resolver never writes to Lead, Contact, CampaignMember, Event, EmailMessage, or Task. No auto-apply.</description>
    <label>OA Engagement Resolution</label>
    <nameField>
        <displayFormat>ENG-{000000}</displayFormat>
        <label>Engagement Resolution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Engagement Resolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>