force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Candidate_Json__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Json__c</fullName>
    <description>JSON of all candidate matches the resolver considered (ids, level, why chosen/rejected). Full audit trail for a human reviewer.</description>
    <label>Candidate JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>