force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Resolver confidence 0.00-1.00 for the matched level. Observe-only; never triggers an auto-write in Phase 1.</description>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>