force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Inbound or Outbound relative to One Algorithm.</description>
    <label>Direction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>