force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Internal_Mislink__c.field-meta.xml
<CustomField>
    <fullName>Internal_Mislink__c</fullName>
    <description>True when the signal (e.g. a Teams Event) is linked only to an internal One Algorithm user/contact with no prospect - the systemic Event mislink pattern this engine surfaces.</description>
    <defaultValue>false</defaultValue>
    <label>Internal Mislink</label>
    <type>Checkbox</type>
</CustomField>