force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Matched_Level__c.field-meta.xml
<CustomField>
    <fullName>Matched_Level__c</fullName>
    <description>Matching hierarchy level reached: L1 exact Lead email, L2 Contact email, L3 corporate domain, L6 human review. (L4/L5 deferred.)</description>
    <label>Matched Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>