force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Party_Domain__c.field-meta.xml
<CustomField>
    <fullName>Party_Domain__c</fullName>
    <description>Email domain of Party Email, used for corporate-domain (L3) matching and free-provider exclusion.</description>
    <label>Party Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>