force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Party_Email__c.field-meta.xml
<CustomField>
    <fullName>Party_Email__c</fullName>
    <description>External counterpart email address on the signal (e.g. inbound reply From address).</description>
    <label>Party Email</label>
    <type>Email</type>
</CustomField>