force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Resolved_CampaignMember__c.field-meta.xml
<CustomField>
    <fullName>Resolved_CampaignMember__c</fullName>
    <description>Id of the CampaignMember the signal maps to (candidate). Stored as text (CampaignMember is not a supported lookup target); the CampaignMember is never modified.</description>
    <label>Resolved CampaignMember</label>
    <length>18</length>
    <type>Text</type>
</CustomField>