force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Resolved_Contact__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact the signal was matched to (candidate). Populated on the shadow log ONLY; the Contact itself is never modified.</description>
    <label>Resolved Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Resolutions</relationshipLabel>
    <relationshipName>Engagement_Resolutions</relationshipName>
    <type>Lookup</type>
</CustomField>