force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Resolved_Lead__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Lead__c</fullName>
    <description>Lead the signal was matched to (candidate). Populated on the shadow log ONLY; the Lead itself is never modified.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Engagement Resolutions</relationshipLabel>
    <relationshipName>Engagement_Resolutions</relationshipName>
    <type>Lookup</type>
</CustomField>