force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <description>Kind of engagement signal observed: Email Reply, Meeting Event, Booking, Task.</description>
    <label>Signal Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>