force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Id of the originating signal record (EmailMessage or Event). Stored as text; ERE never writes back to it.</description>
    <externalId>true</externalId>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>