force-app/main/default/objects/OA_Engagement_Resolution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Review status: Observed, Needs Review, Ambiguous, No Match. Phase 1 sets these for a human queue; no downstream action is taken automatically.</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>