force-app/main/default/objects/OA_Engagement_Resolution__c/listViews/Needs_Review.listView-meta.xml
<ListView>
    <fullName>Needs_Review</fullName>
    <columns>NAME</columns>
    <columns>Signal_Type__c</columns>
    <columns>Party_Email__c</columns>
    <columns>Matched_Level__c</columns>
    <columns>Confidence__c</columns>
    <columns>Status__c</columns>
    <columns>Internal_Mislink__c</columns>
    <columns>Resolved_Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Observed</value>
    </filters>
    <label>Needs Review</label>
</ListView>